# chicago-art-museum-mcp-server

./: .gitignore  CONTRIBUTING.md  EXAMPLES.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  server.py  setup.py  test_server.py
.claude/: settings.local.json
